--- a/lab2-home.html
+++ b/lab2-home.html
@@ -11,7 +11,7 @@
     <h3>Navigation Links:</h3>
     <table border="1">
         <tr>
-            <td><a href="lab2-about.hmtl">About Lab 2</a></td>
+            <td><a href="lab2-about.html">About Lab 2</a></td>
         </tr>
         <tr>
             <td><a href="https://www.google.com">Google Home Page</a></td>
